@@ -20,7 +20,7 @@ DIST graphviz-2.22.2.tar.gz 16674049 RMD160 546eebc1a0b97ffdc431a986102c9e25d1ea
 EBUILD graphviz-2.12.ebuild 5767 RMD160 3e4ad8cbbd6f83c6a53d99d521867f04e31b8631 SHA1 cacc19e9b14c7f6f5235a4282846c71fd9185b76 SHA256 e5b1f4ba08f8b0fcb25e4834c2fd07b50ac5ac9d844c340f7eb2ee6233766eb8
 EBUILD graphviz-2.20.3.ebuild 6756 RMD160 0ccc8e2e0386dfac48af98f50f19dcfaa46bac4d SHA1 bd1ca0ea0eff4c37112ec04e2ae8e183a21bec26 SHA256 1fdc6bfc24c895645ed74199c045cc850602618c29904f2d1fff4d3d23b83d5f
 EBUILD graphviz-2.22.1.ebuild 5902 RMD160 c817d65586e387008c318f3ca21d2aa15055022f SHA1 2876c4240d8aba88845370019b6b233129fce897 SHA256 44dd70d76b74d9a8d21c683f0b0faeafa37fe69f07862b70d00311ffda2c0de4
-EBUILD graphviz-2.22.2-r1.ebuild 5935 RMD160 ecce8a2acd9ce3b280e3520ccefc47256c83a96d SHA1 5829ef6db75cc8940a9317332bb76e13d5188ae4 SHA256 9fd051c88919bcf6dee8036d616881880cf27ba2e0553da6e8fa52b69cd9a8bb
+EBUILD graphviz-2.22.2-r1.ebuild 6177 RMD160 a46120cfcc8f8ef000f6440bae4ba988aacf9bf3 SHA1 94b05c899680a5a56f3b0f0785f0f5ae9cdf7fbe SHA256 a963a6ac0a854f4c33bbb5ede72a0977328070c2ad675768e39035aa7085c754
 EBUILD graphviz-2.22.2.ebuild 5902 RMD160 ebfcd41b48954aaf0e624f44e5149df30e07eca6 SHA1 d9a4030285e7dc1e2f1d08ca8715e79e5bff0066 SHA256 f3aef763a5cf3dc1ca34f4a684e9806a2f989b247fc2a308fd5826dc68e3c001
-MISC ChangeLog 28244 RMD160 42afb8812a4445228893372001f50d08aff8e9fe SHA1 4622c07f3102a2b948d2fb01f059625efe06ebf4 SHA256 c28cd2807d75c1ba1b2dc874a109d1661b669a7bc15ab73687a96297042f3fc4
+MISC ChangeLog 28422 RMD160 d0f46e7c1bfeaf90bccb49ba8a555fdd649e5870 SHA1 bb398518b7328b08bb54b4425a41e685d96d1b5d SHA256 78dc678ef5e2c7984fdc2d02a3ee20c2b12dce8f05a985bf9eee162d671819fb
 MISC metadata.xml 1860 RMD160 81088772ed3740ea2203e44658810083131f73b1 SHA1 693e6bee10a852950747df9a9eebc19e560bcc8e SHA256 6356eef06b745c3f8275d10df402d635f4470be57e426c2a5efb6dd898fc26aa
