@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphviz/graphviz-2.22.2-r1.ebuild,v 1.5 2009/05/12 15:48:10 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphviz/graphviz-2.22.2-r1.ebuild,v 1.6 2009/05/19 12:07:44 pva Exp $
 
 EAPI=2
 
@@ -111,6 +111,9 @@ src_prepare() {
 	# This is an old version of libtool
 	rm -rf libltdl
 	sed -i -e '/libltdl/d' configure.ac || die
+	sed -i -e 's/AC_LIBLTDL_CONVENIENCE/AC_LIBLTDL_INSTALLABLE/' configure.ac || die
+	# This was reported upstream, so don't forget to check next release.
+	sed -i -e 's:$(top_builddir)/libltdl/libltdlc.la:$(LIBLTDL):' lib/gvc/Makefile.am || die
 	# this breaks, and it seems we don't need this "workaround"
 	sed -i -e 's/\$DARWIN9/forgetit/' configure.ac || die
 
