@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/graphviz
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphviz/ChangeLog,v 1.193 2009/05/12 15:48:10 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphviz/ChangeLog,v 1.194 2009/05/19 12:07:44 pva Exp $
+
+  19 May 2009; Peter Volkov <pva@gentoo.org> graphviz-2.22.2-r1.ebuild:
+  Fixed broken build caused by inability to use system ltdl reported by
+  Michael Pontus in bug #265859.
 
   12 May 2009; Jeroen Roovers <jer@gentoo.org> graphviz-2.22.2-r1.ebuild:
   Marked ~hppa (bug #265013).
